--- a/About.html
+++ b/About.html
@@ -95,7 +95,7 @@
             <p>Take a look at the best graduating students</p>
 
         </div>
-        <div class="see-img d-flex">
+        <div class="see-img">
             <div><img
                     src="https://images.pexels.com/photos/1181527/pexels-photo-1181527.jpeg?auto=compress&cs=tinysrgb&w=600"
                     alt=""></div>
@@ -104,7 +104,7 @@
                     alt=""></div>
         </div>
     </section>
-    <section class="program">
+    <!-- <section class="program">
         <h2>Programmes Details</h2>
         <div class="details">
             <div>
@@ -146,10 +146,10 @@
                 </ul>
 
             </div>
-        </div>
-        <div class="button">
+        </div> -->
+        <!-- <div class="button">
             <button class="enroll">Enroll Now</button>
-        </div>
+        </div> -->
 
 
     </section>
