--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../style/about.css">
+    <link rel="stylesheet" href="styles/about.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -41,7 +41,7 @@
         </div>
         <div>
             <nav class="nav-bar">
-                <div><a href="index.html"><img src="../images/download-removebg-preview (2).png" alt=""></a></div>
+                <div><a href="index.html"><img src="images/download-removebg-preview (2).png" alt=""></a></div>
                 <ul id="menu">
                     <a href="">
                         <li id="clos"><button onclick="closer()">X</button></li>
@@ -87,7 +87,7 @@
 
         </div>
 
-        <div class="logo"><a href="index.html"><img src="../images/download-removebg-preview (2).png" alt=""></a></div>
+        <div class="logo"><a href="index.html"><img src="images/download-removebg-preview (2).png" alt=""></a></div>
 
     </section>
     <section class="see">
