--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../icofont/icofont.min.css">
@@ -44,7 +44,7 @@
                 <button id="open_menu" onclick="menu()"><i class="fa-solid fa-bars"></i></button>
                 <button id="close" onclick="closer()">X</button>
             </div>
-           <div class="logo"><a href="index.html"><img src="../images/download-removebg-preview (2).png" alt=""></a></div>
+           <div class="logo"><a href="index.html"><img src="images/download-removebg-preview (2).png" alt=""></a></div>
             <div id="menu">  
              <ul>
                 <a href="About.html">
@@ -104,10 +104,10 @@
                 </div>
                 <div class="footera">
                     <div class="m">mozilla</div>
-                    <div><img src="../images/airbnb.png" alt=""></div>
-                    <div><img src="../images/google.png" alt=""></div>
-                    <div><img src="../images/naver.png" alt=""></div>
-                    <div><img src="../images/daum.png" alt=""></div>
+                    <div><img src="images/airbnb.png" alt=""></div>
+                    <div><img src="images/google.png" alt=""></div>
+                    <div><img src="images/naver.png" alt=""></div>
+                    <div><img src="images/daum.png" alt=""></div>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
 
 </html>
 
-<script src="../index.js"></script>
+<script src="index.js"></script>
 <script src="https://kit.fontawesome.com/46f0f1f01e.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
